update slides and readme

--- a/index.html
+++ b/index.html
@@ -202,19 +202,28 @@
 </div>
 
 </section>
+<section id="arrow-rust-and-cross-language-tooling" class="title-slide slide level1 center">
+<h1>Arrow, Rust, and cross-language tooling</h1>
+<p>Josiah Parry, Esri</p>
+<p>Robin Lovelace (University of Leeds, ITS)</p>
+</section>
+
+<section>
 <section id="hey" class="title-slide slide level1 center">
 <h1>Hey 👋🏼</h1>
 <ul>
 <li class="fragment">I’m Josiah Parry</li>
 <li class="fragment">Sr.&nbsp;Product Engineer @ Esri</li>
 <li class="fragment">R developer</li>
-<li class="fragment">Contributor to extendR</li>
+<li class="fragment">Maintainer of extendR</li>
 </ul>
 <div class="fragment">
 <p><img data-src="images/feRris.png" class="absolute" style="top: 0px; right: 50px; width: 300px; "></p>
 </div>
 </section>
-
+<section id="co" class="slide level2">
+<h2>Co</h2>
+</section></section>
 <section id="speedrun-agenda" class="title-slide slide level1 center">
 <h1>Speedrun Agenda</h1>
 <ul>
@@ -257,7 +266,7 @@
 <li class="fragment">Easy(ish) to pick up</li>
 <li class="fragment">No dependencies</li>
 <li class="fragment">Stupid fast 🏎️💨</li>
-<li class="fragment">Easy parellelization #<code>rayon</code></li>
+<li class="fragment">Easy parallelization #<code>rayon</code></li>
 <li class="fragment">Cross-platform 💻</li>
 </ul>
 </section></section>
@@ -347,6 +356,15 @@
 <p>Approximate Network Integration, Matching, and Enrichment</p>
 </section>
 <section id="anime-1" class="slide level2">
+<h2>ANIME</h2>
+<ul>
+<li class="fragment">Developed with Dr.&nbsp;Robin Lovelace</li>
+<li class="fragment">Road network matching is tough…</li>
+<li class="fragment">ANIME recognizes that it will never be perfect</li>
+<li class="fragment"><strong>Partial</strong> matching of lines</li>
+</ul>
+</section>
+<section id="anime-2" class="slide level2">
 <h2>ANIME</h2>
 
 <img data-src="images/paste-16.png" class="r-stretch"></section>
